Fix header alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -152,7 +152,7 @@ p {
 }
 
 #master i.fa {
-  margin-right: 20px;
+  margin-right: 35px;
 }
 
 .line {
